Setting up the layout of pages under main page

--- a/The _last_testing/main.html
+++ b/The _last_testing/main.html
@@ -9,14 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-<header>
+<nav>
     <div class="brand-logo">Dawid Grochowski</div>
     <ul class="nav-list">
         <li><a>Strona główna</a> </li>
         <li><a>menu</a></li>
         <li><a>O mnie</a> </li>
     </ul>
-</header>
+</nav>
+<main></main><br>
+<main></main><br>
+<main></main><br>
+<main></main><br>
+
+<article></article><br>
+<article></article><br>
 
 
 </body>
